# flyweb

./: .flake8  .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  bootstrap  pyproject.toml
.github/workflows/: python.yml  release-drafter.yml  release.yml
flyweb/: __init__.py  _app.py  _flyweb.py  _server.py  _server_stub.py
flyweb/components/: __init__.py  _components.py
flyweb/examples/counter/: __main__.py
flyweb/examples/misc/: __main__.py
flyweb/examples/stopwatch/: __main__.py
flyweb/examples/todo/: __main__.py
flyweb/static/: index.html  maquette.umd.js  script.js
misc/: run_precommit
src/flyweb/: __init__.py  _app.py  _flyweb.py  _server.py  _server_stub.py
src/flyweb/components/: __init__.py  _components.py
src/flyweb/examples/counter/: __main__.py
src/flyweb/examples/misc/: __main__.py
src/flyweb/examples/stopwatch/: __main__.py
src/flyweb/examples/todo/: __main__.py
src/flyweb/static/: script.js
tests/: browser_test.py  browser_tests.py  components_test.py  flyweb_test.py
