[tool.poetry]
name = "flyweb"
version = "0.1.2"
description = "Immediate-mode web framework"
authors = ["Girts Folkmanis <opensource@girts.me>"]
license = "MIT"
readme = "README.md"

include = [
  "flyweb/static/*.js",
  "flyweb/static/*.html",
]

[tool.poetry.dependencies]
python = "^3.10"
python-socketio = "^5.7.2"
anyio = "^3.6.2"
hypercorn = {version = "^0.14.3", optional = true}
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

# We don't install an ASGI server by default. You have to install
# flyweb[examples] or flyweb[server] for hypercorn to be installed.
pytest-playwright = "^0.3.2"
portpicker = "^1.5.2"

[tool.poetry.extras]
examples = ["hypercorn"]
server = ["hypercorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
force_sort_within_sections = true
single_line_exclusions = ["typing", "typing_extensions"]

[tool.pyright]
venvPath = "."
venv = ".venv"
