[project]
name = "flyweb-framework"
# Updated by CI when publishing.
version = "0.4+placeholder.0"
description = "Immediate-mode web framework"
authors = [
    { name = "Girts Folkmanis", email = "opensource@girts.me" }
]
license = "MIT"
dependencies = [
    "python-socketio>=5.7.2",
    "anyio>=3.6",
    "typing-extensions>=4.5.0",
]
readme = "README.md"
requires-python = ">= 3.10"

# We don't install an ASGI server by default. You have to install
# flyweb[examples] or flyweb[server] for hypercorn to be installed.

[project.optional-dependencies]
examples = [
    "hypercorn>=0.14.3",
]
server = [
    "hypercorn>=0.14.3",
]

[project.urls]
Homepage = "https://github.com/girtsf/flyweb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hypercorn>=0.14.3",
    "portpicker>=1.6.0",
    "pytest-playwright>=0.4.4",
    "pytest>=8.1.1",
    "pre-commit>=3.7.0",
    "ruff>=0.3.7",
    "pyright>=1.1.358",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flyweb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
